[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Background/karmaBackground.png" type="Texture" id=1]
[ext_resource path="res://karmaMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/font/Panton-Trial-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Music/karmaSound.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[node name="karmaMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="karmaBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="goodPeopleRequest" type="HTTPRequest" parent="."]

[node name="badPeopleRequest" type="HTTPRequest" parent="."]

[node name="back" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Retour"

[connection signal="request_completed" from="goodPeopleRequest" to="." method="_on_goodPeopleRequest_request_completed"]
[connection signal="request_completed" from="badPeopleRequest" to="." method="_on_badPeopleRequest_request_completed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
